--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -281,20 +281,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the first term to contain fibonacci number of 1000 digit is  1433\n"
+      "the first term to contain fibonacci number of 1000 digit is  4782\n"
      ]
     }
    ],
    "source": [
-    "#using numpy upto 300 digit\n",
+    "#using numpy upto 1000 digit\n",
     "array1 = np.array([0,1])\n",
     "count_term=1\n",
-    "while(int(np.log10(np.float64(array1[1]))+1)!=300):\n",
-    "    array1 = np.append([array1[1]],[np.sum(array1,dtype=np.float64)])\n",
+    "while(int(np.log10(np.float128(array1[1]))+1)!=1000):\n",
+    "    array1 = np.append([array1[1]],[np.sum(array1,dtype=np.float128)])\n",
     "#    print(array1)\n",
     "    count_term+=1\n",
     "print(\"the first term to contain fibonacci number of 1000 digit is \",count_term)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
